--- a/contact.css
+++ b/contact.css
@@ -70,6 +70,7 @@ body {
 }
 
 .text {
+    margin-top: -65px;
     max-width: 60%;
 }
 
@@ -77,8 +78,8 @@ body {
     width: 600px;
     height: auto;
     padding-right: 350px;
-    padding: 30px;
-    margin: 10px;
+    padding: 0px;
+    margin: 0px;
     animation: intro 2s forwards;
 }
 
